# webserv

./: .gitignore  CMakeLists.txt  Makefile  Webserver.cpp  Webserver.hpp  g_doggy.conf  main.cpp
Config_parser/: Host.cpp  Host.hpp  Parser.cpp  Parser.hpp  Route.hpp  main.cpp
Configs/: Configuration.hpp  complex.conf  g_doggy.conf  simple.conf
Debug.class/: Debug.cpp
Errors/: Errors.cpp  Errors.hpp
IHTTPMessage.interface/: IHTTP.interface.hpp  Methods.cpp  Methods.hpp
IHTTPMessage.interface/HTTPStructs/: s_bodies.hpp  s_headers.hpp  s_startline.hpp
IHTTPMessage.interface/Request.class/: Request.cpp  Request.hpp
IHTTPMessage.interface/Response.class/: Response.class.hpp  Response.cpp  errorResponse.hpp
Server.class/: Route.cpp  Route.hpp  Server.cpp  Server.hpp  ServersFamily.cpp  ServersFamily.hpp  a.out  filekakfile.cpp
Server.class/UtilsServer/: PollStruct.cpp  PollStruct.hpp  SelectHelper.cpp  StructManager.cpp  StructManager.hpp
Webserver.class/: Webserver.cpp  Webserver.hpp
cgi/: cgi.cpp  cgi.hpp
resources/: rude_cgi
root/: webserv
srcs/Config_parser/: Parser.cpp
srcs/Debug.class/: Debug.hpp
srcs/IHTTPMessage.interface/: IHTTP.interface.hpp  Methods.cpp  Methods.hpp
srcs/IHTTPMessage.interface/HTTPStructs/: s_bodies.hpp  s_headers.hpp  s_startline.hpp
srcs/IHTTPMessage.interface/Request.class/: Request.cpp
srcs/IHTTPMessage.interface/Response.class/: Response.cpp  (+1 more)
srcs/Server.class/: Route.cpp  Route.hpp  Server.cpp  Server.hpp
srcs/Webserver.class/: Configuration.hpp  Webserver.cpp  Webserver.hpp
srcs/cgi/: cgi.cpp  cgi.hpp
(+3 files in other folders)
